# webrtc_native_peerconnection_demo

./: CMakeLists.txt  README.md  native-to-browser-test.html
QTWebRTClient/: QTWebRTClient.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  webrtcadapter.cpp  webrtcadapter.h
css/: main.css
peerconnection/: CMakeLists.txt  build.sh
peerconnection/client/: .peer_connection_client.h.swp  conductor.cc  conductor.h  custom_video_source.cc  custom_video_source.h  defaults.cc  main_wnd.h  peer_connection_client.cc
peerconnection/client/linux/: main.cc  main_wnd.cc  main_wnd.h
peerconnection/server/: data_socket.cc  main.cc  peer_channel.cc  utils.cc
